plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // PostgreSQL Driver
    implementation 'org.postgresql:postgresql:42.7.1'
    runtimeOnly 'org.postgresql:postgresql'

    // JWT Dependencies
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // Lombok for reducing boilerplate code
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    // Jackson for JSON processing
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'

    // Validation
    implementation 'jakarta.validation:jakarta.validation-api'
    implementation 'org.hibernate.validator:hibernate-validator'

    // SLF4J Logging
    implementation 'org.slf4j:slf4j-api'

    // OpenAI Java Client (optional - if using AI features)
    // implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'

    // Apache Commons (optional utilities)
    implementation 'org.apache.commons:commons-lang3:3.14.0'

    // HikariCP (Connection Pooling - already included in spring-boot-starter-data-jpa)
    implementation 'com.zaxxer:HikariCP'

    // Spring Boot DevTools (optional - for development)
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Testing Dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'com.h2database:h2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'
}

tasks.named('test') {
    useJUnitPlatform()
    // Exclude tests for faster builds if needed
    // exclude '**/*ApplicationTests.class'
}

// Task to clean build directory
tasks.named('clean') {
    delete 'out'
    delete 'build'
}

// Ensure proper encoding
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

// Configure the bootJar task
tasks.named('bootJar') {
    archiveBaseName = 'learning-path-generator'
    archiveVersion = '1.0.0'
    mainClass = 'com.example.learningpathgenerator.LearningPathGeneratorApplication'
}

// Configure plain jar (if needed)
tasks.named('jar') {
    enabled = false
}